@@ -27,10 +27,13 @@
 enum vertextype
 {
   VTYPE_PSEUDO_IS = 1,
+  VTYPE_PSEUDO_TE_IS,
   VTYPE_NONPSEUDO_IS,
+  VTYPE_NONPSEUDO_TE_IS,
   VTYPE_ES,
   VTYPE_IPREACH_INTERNAL,
-  VTYPE_IPREACH_EXTERNAL
+  VTYPE_IPREACH_EXTERNAL,
+  VTYPE_IPREACH_TE
 #ifdef HAVE_IPV6
     ,
   VTYPE_IP6REACH_INTERNAL,
